[gd_scene load_steps=13 format=2]

[ext_resource path="res://sprites/player/player.png" type="Texture" id=1]
[ext_resource path="res://scripts/player.gd" type="Script" id=2]
[ext_resource path="res://sprites/player/player_explosion/player_explode_frame4.png" type="Texture" id=3]
[ext_resource path="res://sprites/player/player_explosion/player_explode_frame1.png" type="Texture" id=4]
[ext_resource path="res://sprites/player/player_explosion/player_explode_frame7.png" type="Texture" id=5]
[ext_resource path="res://sprites/player/player_explosion/player_explode_frame2.png" type="Texture" id=6]
[ext_resource path="res://sprites/player/player_explosion/player_explode_frame3.png" type="Texture" id=7]
[ext_resource path="res://sprites/player/player_explosion/player_explode_frame5.png" type="Texture" id=8]
[ext_resource path="res://sprites/player/player_explosion/player_explode_frame8.png" type="Texture" id=9]
[ext_resource path="res://sprites/player/player_explosion/player_explode_frame6.png" type="Texture" id=10]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 3.54814, 3.89566 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 3 ), ExtResource( 8 ), ExtResource( 10 ), ExtResource( 5 ), ExtResource( 9 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Player" type="Area2D"]
collision_layer = 4
collision_mask = 51
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 3.48753, 5.98225 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false

[node name="RayCastLeft" type="RayCast2D" parent="."]
position = Vector2( 1.0625, 5.8125 )
rotation = 1.5708
enabled = true
cast_to = Vector2( 0, 2 )

[node name="RayCastRight" type="RayCast2D" parent="."]
position = Vector2( 1.64277, 5.8488 )
rotation = -1.5708
enabled = true
cast_to = Vector2( 0, 6 )

[node name="RayCastUp" type="RayCast2D" parent="."]
position = Vector2( 3.59144, 6.84878 )
rotation = 3.14159
enabled = true
cast_to = Vector2( 0, 5 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -4.25, 2.75 )
frames = SubResource( 2 )
frame = 6
speed_scale = 3.0
centered = false

[connection signal="area_entered" from="." to="." method="_on_Player_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_Player_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Player_body_exited"]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
